tests/ui/standalone_function_with_test_attribute.rs
// `#[hegel::standalone_function]` cannot be combined with `#[test]`.

#[hegel::standalone_function]
#[test]
fn bad(tc: hegel::TestCase) {
    let _ = tc;
}

fn main() {}
